...
                inactiveTrackColor = MaterialTheme.colorScheme.primaryContainer,
                inactiveTickColor = MaterialTheme.colorScheme.primaryContainer
            )
            Slider(
                modifier = Modifier
                    .weight(1f)
                    .testTag("board_size_slider"),
                value = nQueens.toFloat(),
                onValueChange = { onQueenUpdate(it.roundToInt()) },
                colors = sliderColors,
                thumb = {
                    Box(
                        modifier = Modifier
...
